@@ -1,3 +1,7 @@
+2006-04-20 Daniel Perez <daniel@gforgegroup.com>
+	* Applied patch : use a parameter instead of hardcoded admin address
+		https://gforge.org/tracker/?func=detail&aid=2251&group_id=1&atid=106
+
 2006-03-27 Daniel Perez <daniel@gforgegroup.com>
 	* Fixed bug : Capital letters with "stress marks" are wrong in language/Spanish.tab
 		http://gforge.org/tracker/?func=detail&aid=2099&group_id=1&atid=105
